<resources>
    <string name="app_name">RedITA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contrasena">Contraseña*</string>
    <string name="usuario">Usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="inicio">Inicio</string>
    <string name="perfil">Perfil</string>
    <string name="escribe_tu_comentario">Escribe tu comentario</string>
    <string name="nombre_completo">Nombre completo*</string>
    <string name="email">Email*</string>
    <string name="telefono">Teléfono*</string>
    <string name="confirmar_contrasena">Confirmar contraseña*</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_de_la_actividad">Nombre de la actividad</string>
    <string name="descripcion">Descripción</string>
    <string name="tipo_de_actividad">Tipo de actividad</string>
    <string name="volver">Volver</string>
    <string name="registrate">Registrate</string>
    <string name="no_me_gusta">No me gusta</string>
    <string name="me_gusta">Me gusta</string>
    <string name="comentar">Comentar</string>
    <string name="autenticando">Autenticando…</string>
    <string name="error_encontrado">Error encontrado</string>
    <string name="cargando_informacion">Cargando información…</string>
    <string name="mis_actividades">Mis Actividades</string>
    <string name="mis_retos">Mis Retos</string>
    <string name="retos">Retos</string>
    <string name="crear_nueva_activivdad">Guardar actividad</string>
    <string name="creando">Creando…</string>
    <string name="imagenes">imagenes</string>
    <string name="imagen_actividad">Imagen actividad</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="tu_foto_de_perfil">Tu foto de perfil</string>
    <string name="subir_imagenes">Subir imagenes</string>
    <string name="se_han_agregado">Se han agregado</string>
    <string name="no_se_han_seleccionado_imagenes">No se han seleccionado imagenes</string>
    <string name="se_ha_agregado_una_imagen">Se ha agregado una imagen</string>
    <string name="subir_video">Subir video</string>
    <string name="no_se_ha_seleccionado_video">No se ha seleccionado video</string>
    <string name="se_ha_agregado_un_video">Se ha agregado un video</string>
    <string name="cambiar_foto">Cambiar Foto</string>
    <string name="tu_actividad">Tu actividad</string>
    <string name="actividades_que_te_han_gustado">Actividades que te han gustado</string>
    <string name="actividades_que_no_te_han_gustado">Actividades que no te han gustado</string>
    <string name="comentarios_que_has_realizado">Comentarios que has realizado</string>
    <string name="debes_escribir_un_comentario">Debes escribir un comentario</string>
    <string name="este_campo_no_puede_estar_vacio">Este campo no puede estar vacio</string>
    <string name="contraseña_corta">Tu contraseña debe tener al menos 6 caracteres</string>
    <string name="no_coinciden">Las contraseñas no coinciden</string>
    <string name="fecha_de_inicio">Fecha de inicio</string>
    <string name="hora_de_inicio">Hora de inicio</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="default_notification_channel_id">actividades</string>
    <string name="titulo_notificacion">Nueva actividad</string>
    <string name="tu_historial">Tu Historial</string>
    <string name="quien_ha_visto">¿Quién ha visto?</string>
    <string name="mas_antiguo">Más antiguo</string>
    <string name="mas_reciente">Más reciente</string>
    <string name="cerrar">Cerrar</string>
    <string name="docente">Docente</string>
    <string name="guardar">Guardar</string>
    <string name="imagen_perfil">Imagen Perfil</string>
    <string name="usuarios">Usuarios</string>
    <string name="ver_historial">Ver Historial</string>
    <string name="buscar">Buscar</string>
    <string name="nombre_del_estudiante">Nombre del estudiante</string>
    <string name="grado_del_estudiante">Grado del Estudiante</string>
    <string name="titulo_dialogo_actividad">Eliminar actividad</string>
    <string name="descripcion_dialogo_actividad">¿Deseas eliminar esta actividad? esto eliminará todos sus comentarios y reacciones</string>
    <string name="titulo_dialogo_comentario">Eliminar comentario</string>
    <string name="descripcion_dialogo_comentario">¿Deseas eliminar esta comentario? </string>
    <string name="titulo_dialogo_archivo">Eliminar Archivo</string>
    <string name="descripcion_dialogo_archivo">¿Deseas eliminar este archivo? </string>
    <string name="aceptar_dialogo">Eliminar</string>
    <string name="cancelar_dialogo">Cancelar</string>
    <string name="ver_todas_las_imagenes">Ver todas las imagenes</string>
    <string name="categoria">Categoria</string>
    <string name="o">o</string>
    <string name="ver_todo">Ver Todo</string>
</resources>
