<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="usuarioViewModel"
            type="com.itaeducativa.android.redita.ui.usuario.ListaUsuarioViewModel" />

        <variable
            name="autenticacionViewModel"
            type="com.itaeducativa.android.redita.ui.login.AutenticacionViewModel" />

        <variable
            name="confirmarPassword"
            type="String" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.SingUpActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/layoutSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_horizontal_form"
                android:paddingEnd="@dimen/padding_horizontal_form">

                <ImageView
                    android:id="@+id/imageViewFotoPerfilSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/tu_foto_de_perfil"
                    android:visibility="gone" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_multimedia_layout"
                    android:layout_marginBottom="@dimen/margin_top_multimedia_layout"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="elegirImagen"
                    android:text="@string/foto_de_perfil"
                    android:textColor="@android:color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputNombreCompletoSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_completo"
                        android:inputType="text"
                        android:text="@={usuarioViewModel.nombreCompleto}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputEmailSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@={autenticacionViewModel.email}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/telefono"
                        android:inputType="phone"
                        android:text="@={usuarioViewModel.telefono}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputPasswordSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contrasena"
                        android:inputType="textPassword"
                        android:text="@={autenticacionViewModel.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputConfirmarPasswordSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirmar_contrasena"
                        android:inputType="textPassword"
                        android:text="@={confirmarPassword}"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonRegistarse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_top_multimedia_layout"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="signup"
                    android:text="@string/registrarse"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_top_multimedia_layout"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="goToLoginActivity"
                    android:text="@string/volver"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBarSingUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>