<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.itaeducativa.android.redita.ui.actividad.actividad.viewmodels.ActividadViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorCrearActividad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.actividad.actividad.ui.CrearActividadActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_horizontal_form"
                android:paddingEnd="@dimen/padding_horizontal_form"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEstadoImagenes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_se_han_seleccionado_imagenes"
                    />

                <Button
                    android:id="@+id/buttonAgregarImagenes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginTop="@dimen/margin_top_multimedia_layout"
                    android:layout_marginBottom="@dimen/margin_top_multimedia_layout"
                    android:text="@string/subir_imagenes"
                    android:textColor="@android:color/white"
                    android:onClick="elegirImagenes"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_de_la_actividad"
                        android:text="@={viewModel.nombre}"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={viewModel.descripcion}"
                        android:lines="3"
                        android:hint="@string/descripcion" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tipo_de_actividad"
                        android:text="@={viewModel.tipoActividad}"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonCrearActividad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="crearActividad"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginTop="@dimen/margin_top_multimedia_layout"
                    android:text="@string/crear_nueva_activivdad"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>