<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.itaeducativa.android.redita.ui.login.AutenticacionViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <LinearLayout
            android:id="@+id/layoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_horizontal_form"
            android:paddingEnd="@dimen/padding_horizontal_form">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:src="@drawable/escudoita" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                app:endIconMode="password_toggle"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/corners"
                android:onClick="login"
                android:text="@string/ingresar"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:gravity="center"
                android:text="@string/o"
                android:textSize="@dimen/textsize_mi_actividad" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_top_multimedia_layout"
                android:background="@drawable/corners"
                android:onClick="goToSignUpActivity"
                android:text="@string/registrate"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layoutEstadoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBarLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/textViewEstadoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/progressBarLogin"
                android:textAlignment="center" />

        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>