<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="meGusta"
            type="String" />

        <variable
            name="noMeGusta"
            type="String" />
        <variable
            name="comentarios"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/imageButtonMeGusta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_image_button_reacciones"
            android:focusable="true"
            android:background="@android:color/white"
            android:contentDescription="@string/me_gusta"
            android:src="@drawable/ic_thumb_up_black_24dp"
            android:tint="@color/colorPrimaryDark"
            />

        <TextView
            android:id="@+id/textViewCantidadMeGustaPublicacion"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_textview_reacciones"
            android:text="@={meGusta}" />

        <ImageButton
            android:id="@+id/imageButtonNoMeGusta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_image_button_reacciones"
            android:focusable="true"
            android:background="@android:color/white"
            android:contentDescription="@string/no_me_gusta"
            android:src="@drawable/ic_thumb_down_black_24dp"
            android:tint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textViewCantidadNoMeGustaPublicacion"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_textview_reacciones"
            android:text="@={noMeGusta}" />

        <ImageButton
            android:id="@+id/imageButtonComentarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_image_button_reacciones"
            android:focusable="true"
            android:background="@android:color/white"
            android:contentDescription="@string/comentar"
            android:src="@drawable/ic_mode_comment_black_24dp"
            android:tint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textViewCantidadComentariosPublicacion"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@={comentarios}" />
    </LinearLayout>
</layout>