<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.itaeducativa.android.redita.ui.actividad.viewmodels.ActividadViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tituloMiActividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/imageViewMiActividad"
                android:layout_toStartOf="@id/layoutOpciones"
                android:layout_alignParentTop="true"
                android:text="@={viewModel.nombre}"
                android:textSize="@dimen/text_size_nombre_actividad"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutOpciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">

                <ImageButton
                    android:id="@+id/imageButtonEditar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit_black_18dp"
                    android:contentDescription="@string/editar" />

                <ImageButton
                    android:id="@+id/imageButtonEliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_delete_black_18dp"
                    android:contentDescription="@string/eliminar" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewMiActividad"
                android:layout_centerVertical="true"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:imageUrl="@{viewModel.imagenes.get(0)}"
                android:scaleType="centerCrop"
                android:contentDescription="@string/imagen_actividad" />

            <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:text="@={viewModel.descripcion}"
                android:layout_toEndOf="@id/imageViewMiActividad"
                android:layout_below="@id/tituloMiActividad" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>